# SmartHouse

./: .gitignore  README.md
libraspio/: Makefile
libraspio/include/: libraspio.h
libraspio/lib/: Makefile  libraspio.c
libraspio/src/: Makefile  echo.c  main.c
pythonFirebase/: db  key.json  pyFire.py
server/: CMakeLists.txt  Makefile  README  SHserver.service  configure.ac  notas cmake.txt
server/client/: py_socket.py  simple_client.py  socket.py
server/include/: jvlogger.h  libarduinocomms.h  libraspio.h  libserver.h
server/lib/: CMakeLists.txt  Makefile  jvlogger.c  libarduinocomms.c  libraspio.c  libserver.c
server/scripts/: disableservice.sh  enableservice.sh  restartservice.sh  startservice.sh  statusservice.sh  stopservice.sh
server/src/: Makefile  Makefile.am  SHServer86.c  db  main.c  py_socket.py
smarthouse/: angular.json  config.xml  ionic.config.json  package-lock.json  package.json  sass.config.js
smarthouse/src/: index.html
smarthouse/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
smarthouse/src/app/admin/: admin.module.ts  admin.page.html  admin.page.scss  admin.page.ts
smarthouse/src/app/cloud-list/: cloud-list-routing.module.ts  cloud-list.module.ts  cloud-list.page.html  cloud-list.page.spec.ts  cloud-list.page.ts
smarthouse/src/app/files/: files.page.html  files.page.ts
smarthouse/src/app/guards/: auth.guard.ts
smarthouse/src/app/home/: home.page.html  home.page.ts
smarthouse/src/app/lights/: lights-routing.module.ts  lights.module.ts  lights.page.html  lights.page.scss  lights.page.spec.ts  lights.page.ts
smarthouse/src/app/login/: login.page.html  login.page.scss  login.page.ts
smarthouse/src/app/pages/casa-details/: casa-details-routing.module.ts  casa-details.module.ts  casa-details.page.html  casa-details.page.spec.ts  casa-details.page.ts
smarthouse/src/app/register/: register.page.html  register.page.ts
smarthouse/src/app/services/: auth.service.ts  casa.service.spec.ts  casa.service.ts  theme.service.ts
smarthouse/src/environments/: environment.ts
smarthouse/src/theme/: variables.scss
